--- a/init0.ipynb
+++ b/init0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxR8j8VNQfbOShlZekRQdJ",
+      "authorship_tag": "ABX9TyPUIBYu1a4Ms7lC0fDFyvL4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,23 +34,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N5UtVN7ezPiJ",
-        "outputId": "df1dc740-3f0a-4fb5-c7e3-03f8877a33c2"
+        "outputId": "6570e143-e10b-4eca-a5c3-2d283782b225"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-07-29 16:21:23--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "--2023-07-29 17:50:58--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1115394 (1.1M) [text/plain]\n",
-            "Saving to: ‘input.txt’\n",
+            "Saving to: ‘input.txt.1’\n",
             "\n",
-            "\rinput.txt             0%[                    ]       0  --.-KB/s               \rinput.txt           100%[===================>]   1.06M  --.-KB/s    in 0.03s   \n",
+            "\rinput.txt.1           0%[                    ]       0  --.-KB/s               \rinput.txt.1         100%[===================>]   1.06M  --.-KB/s    in 0.03s   \n",
             "\n",
-            "2023-07-29 16:21:23 (33.1 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
+            "2023-07-29 17:50:58 (35.7 MB/s) - ‘input.txt.1’ saved [1115394/1115394]\n",
             "\n"
           ]
         }
@@ -66,7 +66,7 @@
         "# Imports\n",
         "import torch\n",
         "from torch import nn\n",
-        "from torch.optim import Adam\n",
+        "from torch.optim import AdamW\n",
         "from torch.nn import functional as F"
       ],
       "metadata": {
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gT3LmTYyzuS2",
-        "outputId": "74472e75-020b-439d-f2f6-f69c4f3b12f9"
+        "outputId": "75202e93-fc85-47c7-ee41-4eec9cd14f7e"
       },
       "execution_count": 4,
       "outputs": [
@@ -120,6 +120,7 @@
       "source": [
         "# Unique Characters in the Dataset\n",
         "characters = list(set(text))\n",
+        "vocab_size = len(characters)\n",
         "print(''.join(sorted(characters)))\n",
         "print(len(characters))"
       ],
@@ -128,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "coGZloQyz8-U",
-        "outputId": "5fd3b064-f3ae-43e5-937a-cd2fc802ff39"
+        "outputId": "e6360b30-2004-4929-c657-b62eb66965d7"
       },
       "execution_count": 5,
       "outputs": [
@@ -162,7 +163,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ySzNXyug0SCH",
-        "outputId": "ba10f294-1eb2-4b8b-a092-d3b7ca4d1e40"
+        "outputId": "bd86710d-0454-456b-fa07-d44c74bfaafc"
       },
       "execution_count": 6,
       "outputs": [
@@ -170,8 +171,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[5, 43, 24, 29, 57, 62, 12, 62, 61]\n",
-            "h?TUqPfPd\n"
+            "[49, 14, 4, 33, 15, 8, 7, 8, 30]\n",
+            "fqdz -i-Y\n"
           ]
         }
       ]
@@ -188,7 +189,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FuB7O7Ad0syi",
-        "outputId": "978b0fe9-353f-4d81-a5e4-c79065cfdf85"
+        "outputId": "6b6b8572-0709-4062-e84f-e507382359e7"
       },
       "execution_count": 7,
       "outputs": [
@@ -245,46 +246,46 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gFd4dvh95tAp",
-        "outputId": "05ffd20e-df9f-4a65-d47f-4889075c316c"
+        "outputId": "321935ec-5caf-4bca-8bbb-dab5c0776aa7"
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Context is: [44], Target is 50\n",
-            "Context is: [44, 50], Target is 27\n",
-            "Context is: [44, 50, 27], Target is 44\n",
-            "Context is: [44, 50, 27, 44], Target is 34\n",
-            "Context is: [44, 50, 27, 44, 34], Target is 60\n",
-            "Context is: [44, 50, 27, 44, 34, 60], Target is 16\n",
-            "Context is: [44, 50, 27, 44, 34, 60, 16], Target is 38\n",
-            "Context is: [44, 50, 27, 44, 34, 60, 16, 38], Target is 54\n",
-            "Context is: [31], Target is 10\n",
-            "Context is: [31, 10], Target is 43\n",
-            "Context is: [31, 10, 43], Target is 19\n",
-            "Context is: [31, 10, 43, 19], Target is 24\n",
-            "Context is: [31, 10, 43, 19, 24], Target is 43\n",
-            "Context is: [31, 10, 43, 19, 24, 43], Target is 19\n",
-            "Context is: [31, 10, 43, 19, 24, 43, 19], Target is 24\n",
-            "Context is: [31, 10, 43, 19, 24, 43, 19, 24], Target is 23\n",
-            "Context is: [12], Target is 12\n",
-            "Context is: [12, 12], Target is 43\n",
-            "Context is: [12, 12, 43], Target is 56\n",
-            "Context is: [12, 12, 43, 56], Target is 36\n",
-            "Context is: [12, 12, 43, 56, 36], Target is 12\n",
-            "Context is: [12, 12, 43, 56, 36, 12], Target is 43\n",
-            "Context is: [12, 12, 43, 56, 36, 12, 43], Target is 62\n",
-            "Context is: [12, 12, 43, 56, 36, 12, 43, 62], Target is 13\n",
-            "Context is: [13], Target is 2\n",
-            "Context is: [13, 2], Target is 10\n",
-            "Context is: [13, 2, 10], Target is 43\n",
-            "Context is: [13, 2, 10, 43], Target is 12\n",
-            "Context is: [13, 2, 10, 43, 12], Target is 61\n",
-            "Context is: [13, 2, 10, 43, 12, 61], Target is 24\n",
-            "Context is: [13, 2, 10, 43, 12, 61, 24], Target is 5\n",
-            "Context is: [13, 2, 10, 43, 12, 61, 24, 5], Target is 10\n"
+            "Context is: [8], Target is 43\n",
+            "Context is: [8, 43], Target is 43\n",
+            "Context is: [8, 43, 43], Target is 31\n",
+            "Context is: [8, 43, 43, 31], Target is 7\n",
+            "Context is: [8, 43, 43, 31, 7], Target is 50\n",
+            "Context is: [8, 43, 43, 31, 7, 50], Target is 51\n",
+            "Context is: [8, 43, 43, 31, 7, 50, 51], Target is 33\n",
+            "Context is: [8, 43, 43, 31, 7, 50, 51, 33], Target is 15\n",
+            "Context is: [19], Target is 8\n",
+            "Context is: [19, 8], Target is 7\n",
+            "Context is: [19, 8, 7], Target is 8\n",
+            "Context is: [19, 8, 7, 8], Target is 4\n",
+            "Context is: [19, 8, 7, 8, 4], Target is 10\n",
+            "Context is: [19, 8, 7, 8, 4, 10], Target is 14\n",
+            "Context is: [19, 8, 7, 8, 4, 10, 14], Target is 63\n",
+            "Context is: [19, 8, 7, 8, 4, 10, 14, 63], Target is 46\n",
+            "Context is: [32], Target is 18\n",
+            "Context is: [32, 18], Target is 4\n",
+            "Context is: [32, 18, 4], Target is 17\n",
+            "Context is: [32, 18, 4, 17], Target is 61\n",
+            "Context is: [32, 18, 4, 17, 61], Target is 31\n",
+            "Context is: [32, 18, 4, 17, 61, 31], Target is 32\n",
+            "Context is: [32, 18, 4, 17, 61, 31, 32], Target is 63\n",
+            "Context is: [32, 18, 4, 17, 61, 31, 32, 63], Target is 18\n",
+            "Context is: [18], Target is 7\n",
+            "Context is: [18, 7], Target is 32\n",
+            "Context is: [18, 7, 32], Target is 8\n",
+            "Context is: [18, 7, 32, 8], Target is 50\n",
+            "Context is: [18, 7, 32, 8, 50], Target is 4\n",
+            "Context is: [18, 7, 32, 8, 50, 4], Target is 2\n",
+            "Context is: [18, 7, 32, 8, 50, 4, 2], Target is 31\n",
+            "Context is: [18, 7, 32, 8, 50, 4, 2, 31], Target is 29\n"
           ]
         }
       ]
@@ -293,16 +294,100 @@
       "cell_type": "code",
       "source": [
         "# Seed\n",
-        "torch.maual_seed(1337)\n",
+        "torch.manual_seed(1337)\n",
         "\n",
         "# Bigram Model\n",
         "class BigramLanguageModel(nn.Module):\n",
-        ""
+        "    def __init__(self, vocab_size):\n",
+        "        super(BigramLanguageModel, self).__init__()\n",
+        "        # Each Token Reads a Row From The Table\n",
+        "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
+        "\n",
+        "    def forward(self, context, targets = None):\n",
+        "        # Logits (batch_size, block_size, vocab_size)\n",
+        "        logits = self.token_embedding_table(context)\n",
+        "\n",
+        "        # Loss\n",
+        "        if targets == None:\n",
+        "            loss = None\n",
+        "        else:\n",
+        "            # Get batch_size, block_size, vocab_size\n",
+        "            B, T, C = logits.shape\n",
+        "            # Reshape\n",
+        "            logits = logits.view(B*T, C)\n",
+        "            targets = targets.view(B*T,)\n",
+        "            # Calculate Loss\n",
+        "            loss = F.cross_entropy(logits, targets)\n",
+        "\n",
+        "        return logits, loss\n",
+        "\n",
+        "    def generate(self, context, max_new_tokens):\n",
+        "        # Iterating Through Number of Tokens To Generate\n",
+        "        for _ in range(max_new_tokens):\n",
+        "            # Get Predictions\n",
+        "            logits, loss = self(context)\n",
+        "            # Get Last Block (Time Step)\n",
+        "            logits = logits[:, -1, :]\n",
+        "            # Probability\n",
+        "            probs = F.softmax(logits, dim = -1)\n",
+        "            # Sample From The Distribution\n",
+        "            context_next = torch.multinomial(probs, num_samples = 1)\n",
+        "            # Append\n",
+        "            context = torch.cat((context, context_next), dim = 1)\n",
+        "\n",
+        "        return context"
       ],
       "metadata": {
         "id": "JDfNSaSXditu"
       },
-      "execution_count": null,
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test Bigram\n",
+        "model = BigramLanguageModel(vocab_size)\n",
+        "logits, loss = model(x_batch, y_batch)\n",
+        "print(decode_text(model.generate(context = torch.zeros((1, 1), dtype=torch.long), max_new_tokens=100)[0].tolist()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "piaGrlXHf20G",
+        "outputId": "5612bf87-5b0b-439f-df41-ae79b2c74ddf"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DocKYBrdMHZRL$ O$NI?A$QCb!SLNYs-gfQ F$$yqZOfj:Pm$a!oBnqLeY&CfXVfXCtrm'JlaHCyO?h3thgfGWMMeAECNvy,U:fXx\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Optimizer\n",
+        "opt = AdamW(model.parameters(), lr = 1e-3)"
+      ],
+      "metadata": {
+        "id": "oSXm3xZzjYSw"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FVBJn5WnxfQS"
+      },
+      "execution_count": 12,
       "outputs": []
     }
   ]
