--- a/init0.ipynb
+++ b/init0.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUIBYu1a4Ms7lC0fDFyvL4",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPqwhHXc4BOmxSV6gFcbhiG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -34,23 +36,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N5UtVN7ezPiJ",
-        "outputId": "6570e143-e10b-4eca-a5c3-2d283782b225"
+        "outputId": "8d55c439-e98d-499f-b318-229acd0b41e3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-07-29 17:50:58--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "--2023-07-29 18:49:44--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1115394 (1.1M) [text/plain]\n",
             "Saving to: ‘input.txt.1’\n",
             "\n",
-            "\rinput.txt.1           0%[                    ]       0  --.-KB/s               \rinput.txt.1         100%[===================>]   1.06M  --.-KB/s    in 0.03s   \n",
+            "\rinput.txt.1           0%[                    ]       0  --.-KB/s               \rinput.txt.1         100%[===================>]   1.06M  --.-KB/s    in 0.05s   \n",
             "\n",
-            "2023-07-29 17:50:58 (35.7 MB/s) - ‘input.txt.1’ saved [1115394/1115394]\n",
+            "2023-07-29 18:49:44 (23.2 MB/s) - ‘input.txt.1’ saved [1115394/1115394]\n",
             "\n"
           ]
         }
@@ -78,6 +80,18 @@
     {
       "cell_type": "code",
       "source": [
+        "# Device\n",
+        "device = 'cuda:0' if torch.cuda.is_available() else 'cpu'"
+      ],
+      "metadata": {
+        "id": "rQRXbjJy4H3i"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Read Dataset\n",
         "with open('input.txt', 'r', encoding = 'utf-8') as f:\n",
         "    text = f.read()"
@@ -85,7 +99,7 @@
       "metadata": {
         "id": "j9JSaAvszd4H"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -99,9 +113,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gT3LmTYyzuS2",
-        "outputId": "75202e93-fc85-47c7-ee41-4eec9cd14f7e"
+        "outputId": "f169a337-af27-42ec-cfe4-922a06b4354c"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -111,7 +125,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -129,9 +143,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "coGZloQyz8-U",
-        "outputId": "e6360b30-2004-4929-c657-b62eb66965d7"
+        "outputId": "b45204be-4ecb-4dc6-d5a2-d6b13db42f71"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,16 +177,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ySzNXyug0SCH",
-        "outputId": "bd86710d-0454-456b-fa07-d44c74bfaafc"
+        "outputId": "67dfb8ed-fa2d-41af-d3c9-fbf1ef98e02e"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[49, 14, 4, 33, 15, 8, 7, 8, 30]\n",
-            "fqdz -i-Y\n"
+            "[8, 15, 17, 6, 18, 4, 31, 4, 12]\n",
+            "cdMaet&tQ\n"
           ]
         }
       ]
@@ -189,9 +203,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FuB7O7Ad0syi",
-        "outputId": "6b6b8572-0709-4062-e84f-e507382359e7"
+        "outputId": "7894b46d-ceb6-4709-ed14-58b3f26bda0b"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +227,7 @@
       "metadata": {
         "id": "lsk4V8oW3EdE"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -246,46 +260,46 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gFd4dvh95tAp",
-        "outputId": "321935ec-5caf-4bca-8bbb-dab5c0776aa7"
+        "outputId": "5ede098e-38ba-4cd1-b936-b854bbaf7fd7"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Context is: [8], Target is 43\n",
-            "Context is: [8, 43], Target is 43\n",
-            "Context is: [8, 43, 43], Target is 31\n",
-            "Context is: [8, 43, 43, 31], Target is 7\n",
-            "Context is: [8, 43, 43, 31, 7], Target is 50\n",
-            "Context is: [8, 43, 43, 31, 7, 50], Target is 51\n",
-            "Context is: [8, 43, 43, 31, 7, 50, 51], Target is 33\n",
-            "Context is: [8, 43, 43, 31, 7, 50, 51, 33], Target is 15\n",
-            "Context is: [19], Target is 8\n",
-            "Context is: [19, 8], Target is 7\n",
-            "Context is: [19, 8, 7], Target is 8\n",
-            "Context is: [19, 8, 7, 8], Target is 4\n",
-            "Context is: [19, 8, 7, 8, 4], Target is 10\n",
-            "Context is: [19, 8, 7, 8, 4, 10], Target is 14\n",
-            "Context is: [19, 8, 7, 8, 4, 10, 14], Target is 63\n",
-            "Context is: [19, 8, 7, 8, 4, 10, 14, 63], Target is 46\n",
-            "Context is: [32], Target is 18\n",
-            "Context is: [32, 18], Target is 4\n",
-            "Context is: [32, 18, 4], Target is 17\n",
-            "Context is: [32, 18, 4, 17], Target is 61\n",
-            "Context is: [32, 18, 4, 17, 61], Target is 31\n",
-            "Context is: [32, 18, 4, 17, 61, 31], Target is 32\n",
-            "Context is: [32, 18, 4, 17, 61, 31, 32], Target is 63\n",
-            "Context is: [32, 18, 4, 17, 61, 31, 32, 63], Target is 18\n",
-            "Context is: [18], Target is 7\n",
-            "Context is: [18, 7], Target is 32\n",
-            "Context is: [18, 7, 32], Target is 8\n",
-            "Context is: [18, 7, 32, 8], Target is 50\n",
-            "Context is: [18, 7, 32, 8, 50], Target is 4\n",
-            "Context is: [18, 7, 32, 8, 50, 4], Target is 2\n",
-            "Context is: [18, 7, 32, 8, 50, 4, 2], Target is 31\n",
-            "Context is: [18, 7, 32, 8, 50, 4, 2, 31], Target is 29\n"
+            "Context is: [1], Target is 4\n",
+            "Context is: [1, 4], Target is 63\n",
+            "Context is: [1, 4, 63], Target is 17\n",
+            "Context is: [1, 4, 63, 17], Target is 23\n",
+            "Context is: [1, 4, 63, 17, 23], Target is 40\n",
+            "Context is: [1, 4, 63, 17, 23, 40], Target is 42\n",
+            "Context is: [1, 4, 63, 17, 23, 40, 42], Target is 17\n",
+            "Context is: [1, 4, 63, 17, 23, 40, 42, 17], Target is 39\n",
+            "Context is: [42], Target is 33\n",
+            "Context is: [42, 33], Target is 17\n",
+            "Context is: [42, 33, 17], Target is 39\n",
+            "Context is: [42, 33, 17, 39], Target is 33\n",
+            "Context is: [42, 33, 17, 39, 33], Target is 40\n",
+            "Context is: [42, 33, 17, 39, 33, 40], Target is 23\n",
+            "Context is: [42, 33, 17, 39, 33, 40, 23], Target is 42\n",
+            "Context is: [42, 33, 17, 39, 33, 40, 23, 42], Target is 32\n",
+            "Context is: [17], Target is 25\n",
+            "Context is: [17, 25], Target is 33\n",
+            "Context is: [17, 25, 33], Target is 40\n",
+            "Context is: [17, 25, 33, 40], Target is 31\n",
+            "Context is: [17, 25, 33, 40, 31], Target is 1\n",
+            "Context is: [17, 25, 33, 40, 31, 1], Target is 4\n",
+            "Context is: [17, 25, 33, 40, 31, 1, 4], Target is 37\n",
+            "Context is: [17, 25, 33, 40, 31, 1, 4, 37], Target is 7\n",
+            "Context is: [4], Target is 17\n",
+            "Context is: [4, 17], Target is 16\n",
+            "Context is: [4, 17, 16], Target is 42\n",
+            "Context is: [4, 17, 16, 42], Target is 31\n",
+            "Context is: [4, 17, 16, 42, 31], Target is 33\n",
+            "Context is: [4, 17, 16, 42, 31, 33], Target is 1\n",
+            "Context is: [4, 17, 16, 42, 31, 33, 1], Target is 22\n",
+            "Context is: [4, 17, 16, 42, 31, 33, 1, 22], Target is 4\n"
           ]
         }
       ]
@@ -340,31 +354,33 @@
       "metadata": {
         "id": "JDfNSaSXditu"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Test Bigram\n",
-        "model = BigramLanguageModel(vocab_size)\n",
-        "logits, loss = model(x_batch, y_batch)\n",
-        "print(decode_text(model.generate(context = torch.zeros((1, 1), dtype=torch.long), max_new_tokens=100)[0].tolist()))"
+        "model = BigramLanguageModel(vocab_size).to(device)\n",
+        "logits, loss = model(x_batch.to(device), y_batch.to(device))\n",
+        "print(decode_text(model.generate(context = torch.zeros((1, 1), dtype=torch.long).to(device), max_new_tokens=100)[0].tolist()))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "piaGrlXHf20G",
-        "outputId": "5612bf87-5b0b-439f-df41-ae79b2c74ddf"
+        "outputId": "b1eec964-55c9-482b-e0c8-cdf920925557"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "DocKYBrdMHZRL$ O$NI?A$QCb!SLNYs-gfQ F$$yqZOfj:Pm$a!oBnqLeY&CfXVfXCtrm'JlaHCyO?h3thgfGWMMeAECNvy,U:fXx\n"
+            "pPyi'xmJUJatpfWwfmOm-ERVA- KinbpYxQB-z-u!u'qolki\n",
+            "rlgR\n",
+            "$$rjki!y.$dp;ckVZ'gh;'KOXfQ;RuxaH3rZGtt'AdradOK\n"
           ]
         }
       ]
@@ -378,16 +394,99 @@
       "metadata": {
         "id": "oSXm3xZzjYSw"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Train BigramLanguageModel\n",
+        "print_freq = 10\n",
+        "batch_size = 32\n",
+        "for epoch in range(100):\n",
+        "    # Get Batch\n",
+        "    x, y = get_batch('train')\n",
+        "    x, y = x.to(device), y.to(device)\n",
+        "\n",
+        "    # Forward\n",
+        "    logits, loss = model(x, y)\n",
+        "\n",
+        "    # Backward\n",
+        "    opt.zero_grad(set_to_none=True)\n",
+        "    loss.backward()\n",
+        "    opt.step()\n",
+        "\n",
+        "    if epoch%print_freq == 0:\n",
+        "        print(f'Epoch: {epoch}, Loss: {loss.item()}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FVBJn5WnxfQS",
+        "outputId": "8ff0c262-4c31-4824-f37a-476555f7bee2"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 0, Loss: 4.496352195739746\n",
+            "Epoch: 10, Loss: 4.599323272705078\n",
+            "Epoch: 20, Loss: 4.584362030029297\n",
+            "Epoch: 30, Loss: 4.498538494110107\n",
+            "Epoch: 40, Loss: 4.577712059020996\n",
+            "Epoch: 50, Loss: 4.467401504516602\n",
+            "Epoch: 60, Loss: 4.574483871459961\n",
+            "Epoch: 70, Loss: 4.441227912902832\n",
+            "Epoch: 80, Loss: 4.4763689041137695\n",
+            "Epoch: 90, Loss: 4.581730842590332\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(decode_text(model.generate(context = torch.zeros((1, 1), dtype=torch.long).to(device), max_new_tokens=500)[0].tolist()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mPlBSRha6MRQ",
+        "outputId": "499bff20-888f-4fb2-f8d2-97e880878324"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "p?!f$WSB,a?UTmwQad\n",
+            "z:NiYIX'pyzJeDhjZ-m':u.W&LL&qLD?kityASxWuKCJ:GyKy JvUW:bEAx?FShA:QIzlrb3rZe&VQ?Un\n",
+            "Hrls?Hu,?YuRLoKA.AYvhDoZeFHi\n",
+            ";c $rB,WUNu,kioXPEjPgcc'$Mf3,ERgAF&BoX.U,&mePxy\n",
+            "CCi.CYDUkilA.UgtA,A3rBUQIOd?\n",
+            "fOq'MuYxiKF:u$cGw-ki\n",
+            "et DSaF - Jr&mxgDhc3P\n",
+            "Vb$kig\n",
+            "x-GCpfqVURtIvXuGXm!QqncUNE$MMU;?-Iki 3xYKPDFojo D fmmjmjBJGht'b.rbSHgGab.OV.ULdLT:,ue,edprdtdPu?B-kZ lsxAy&- :FZbOHUQmdLdLK,iJGxA3PIOem,EZ !LOjgj!Q Ek$rBUoqgle,IGtS',w???CJprBInpzTr&EFD?cDH\n",
+            "fwbz-EqoQQ\n",
+            "fwBhHGtdgJ!EfD\n",
+            "NEEb?;c&z:vnQSXCoFx. J-' IXA\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "FVBJn5WnxfQS"
+        "id": "2ADS-4pI6fO8"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": []
     }
   ]
