--- a/init0.ipynb
+++ b/init0.ipynb
@@ -5,7 +5,10 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPqwhHXc4BOmxSV6gFcbhiG",
+      "collapsed_sections": [
+        "fvvHR9esNq6D"
+      ],
+      "authorship_tag": "ABX9TyMSafnTdVVw9YYHTiCCThlt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,23 +39,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N5UtVN7ezPiJ",
-        "outputId": "8d55c439-e98d-499f-b318-229acd0b41e3"
+        "outputId": "6345c75d-56fa-4596-af2b-867a12ac4354"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-07-29 18:49:44--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "--2023-07-30 20:25:02--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1115394 (1.1M) [text/plain]\n",
-            "Saving to: ‘input.txt.1’\n",
+            "Saving to: ‘input.txt’\n",
             "\n",
-            "\rinput.txt.1           0%[                    ]       0  --.-KB/s               \rinput.txt.1         100%[===================>]   1.06M  --.-KB/s    in 0.05s   \n",
+            "input.txt           100%[===================>]   1.06M  --.-KB/s    in 0.05s   \n",
             "\n",
-            "2023-07-29 18:49:44 (23.2 MB/s) - ‘input.txt.1’ saved [1115394/1115394]\n",
+            "2023-07-30 20:25:02 (20.0 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
             "\n"
           ]
         }
@@ -76,6 +79,15 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Data**"
+      ],
+      "metadata": {
+        "id": "fvvHR9esNq6D"
+      }
     },
     {
       "cell_type": "code",
@@ -113,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gT3LmTYyzuS2",
-        "outputId": "f169a337-af27-42ec-cfe4-922a06b4354c"
+        "outputId": "59581000-48a4-40a7-a110-92c1c6442f38"
       },
       "execution_count": 5,
       "outputs": [
@@ -143,7 +155,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "coGZloQyz8-U",
-        "outputId": "b45204be-4ecb-4dc6-d5a2-d6b13db42f71"
+        "outputId": "6534c637-57e6-4250-fa23-8f64b6044b62"
       },
       "execution_count": 6,
       "outputs": [
@@ -177,7 +189,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ySzNXyug0SCH",
-        "outputId": "67dfb8ed-fa2d-41af-d3c9-fbf1ef98e02e"
+        "outputId": "3833819d-7a73-43d8-91c1-81d548a0d499"
       },
       "execution_count": 7,
       "outputs": [
@@ -185,8 +197,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[8, 15, 17, 6, 18, 4, 31, 4, 12]\n",
-            "cdMaet&tQ\n"
+            "[47, 10, 27, 24, 51, 20, 37, 20, 39]\n",
+            "Z!VowfsfQ\n"
           ]
         }
       ]
@@ -203,7 +215,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FuB7O7Ad0syi",
-        "outputId": "7894b46d-ceb6-4709-ed14-58b3f26bda0b"
+        "outputId": "b2268060-e891-4cc8-a6c9-309c40514158"
       },
       "execution_count": 8,
       "outputs": [
@@ -260,7 +272,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gFd4dvh95tAp",
-        "outputId": "5ede098e-38ba-4cd1-b936-b854bbaf7fd7"
+        "outputId": "c42858c8-bfc8-44cf-c44e-f7632688cf67"
       },
       "execution_count": 10,
       "outputs": [
@@ -268,41 +280,50 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Context is: [1], Target is 4\n",
-            "Context is: [1, 4], Target is 63\n",
-            "Context is: [1, 4, 63], Target is 17\n",
-            "Context is: [1, 4, 63, 17], Target is 23\n",
-            "Context is: [1, 4, 63, 17, 23], Target is 40\n",
-            "Context is: [1, 4, 63, 17, 23, 40], Target is 42\n",
-            "Context is: [1, 4, 63, 17, 23, 40, 42], Target is 17\n",
-            "Context is: [1, 4, 63, 17, 23, 40, 42, 17], Target is 39\n",
-            "Context is: [42], Target is 33\n",
-            "Context is: [42, 33], Target is 17\n",
-            "Context is: [42, 33, 17], Target is 39\n",
-            "Context is: [42, 33, 17, 39], Target is 33\n",
-            "Context is: [42, 33, 17, 39, 33], Target is 40\n",
-            "Context is: [42, 33, 17, 39, 33, 40], Target is 23\n",
-            "Context is: [42, 33, 17, 39, 33, 40, 23], Target is 42\n",
-            "Context is: [42, 33, 17, 39, 33, 40, 23, 42], Target is 32\n",
-            "Context is: [17], Target is 25\n",
-            "Context is: [17, 25], Target is 33\n",
-            "Context is: [17, 25, 33], Target is 40\n",
-            "Context is: [17, 25, 33, 40], Target is 31\n",
-            "Context is: [17, 25, 33, 40, 31], Target is 1\n",
-            "Context is: [17, 25, 33, 40, 31, 1], Target is 4\n",
-            "Context is: [17, 25, 33, 40, 31, 1, 4], Target is 37\n",
-            "Context is: [17, 25, 33, 40, 31, 1, 4, 37], Target is 7\n",
-            "Context is: [4], Target is 17\n",
-            "Context is: [4, 17], Target is 16\n",
-            "Context is: [4, 17, 16], Target is 42\n",
-            "Context is: [4, 17, 16, 42], Target is 31\n",
-            "Context is: [4, 17, 16, 42, 31], Target is 33\n",
-            "Context is: [4, 17, 16, 42, 31, 33], Target is 1\n",
-            "Context is: [4, 17, 16, 42, 31, 33, 1], Target is 22\n",
-            "Context is: [4, 17, 16, 42, 31, 33, 1, 22], Target is 4\n"
+            "Context is: [36], Target is 54\n",
+            "Context is: [36, 54], Target is 17\n",
+            "Context is: [36, 54, 17], Target is 54\n",
+            "Context is: [36, 54, 17, 54], Target is 17\n",
+            "Context is: [36, 54, 17, 54, 17], Target is 21\n",
+            "Context is: [36, 54, 17, 54, 17, 21], Target is 28\n",
+            "Context is: [36, 54, 17, 54, 17, 21, 28], Target is 18\n",
+            "Context is: [36, 54, 17, 54, 17, 21, 28, 18], Target is 35\n",
+            "Context is: [51], Target is 20\n",
+            "Context is: [51, 20], Target is 27\n",
+            "Context is: [51, 20, 27], Target is 63\n",
+            "Context is: [51, 20, 27, 63], Target is 20\n",
+            "Context is: [51, 20, 27, 63, 20], Target is 48\n",
+            "Context is: [51, 20, 27, 63, 20, 48], Target is 48\n",
+            "Context is: [51, 20, 27, 63, 20, 48, 48], Target is 34\n",
+            "Context is: [51, 20, 27, 63, 20, 48, 48, 34], Target is 37\n",
+            "Context is: [27], Target is 1\n",
+            "Context is: [27, 1], Target is 20\n",
+            "Context is: [27, 1, 20], Target is 37\n",
+            "Context is: [27, 1, 20, 37], Target is 42\n",
+            "Context is: [27, 1, 20, 37, 42], Target is 0\n",
+            "Context is: [27, 1, 20, 37, 42, 0], Target is 22\n",
+            "Context is: [27, 1, 20, 37, 42, 0, 22], Target is 20\n",
+            "Context is: [27, 1, 20, 37, 42, 0, 22, 20], Target is 27\n",
+            "Context is: [21], Target is 17\n",
+            "Context is: [21, 17], Target is 30\n",
+            "Context is: [21, 17, 30], Target is 27\n",
+            "Context is: [21, 17, 30, 27], Target is 41\n",
+            "Context is: [21, 17, 30, 27, 41], Target is 21\n",
+            "Context is: [21, 17, 30, 27, 41, 21], Target is 26\n",
+            "Context is: [21, 17, 30, 27, 41, 21, 26], Target is 47\n",
+            "Context is: [21, 17, 30, 27, 41, 21, 26, 47], Target is 50\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Bigram Language Model**"
+      ],
+      "metadata": {
+        "id": "KVYFnCuGNvLC"
+      }
     },
     {
       "cell_type": "code",
@@ -312,14 +333,18 @@
         "\n",
         "# Bigram Model\n",
         "class BigramLanguageModel(nn.Module):\n",
-        "    def __init__(self, vocab_size):\n",
+        "    def __init__(self, vocab_size, n_embed = 32):\n",
         "        super(BigramLanguageModel, self).__init__()\n",
         "        # Each Token Reads a Row From The Table\n",
-        "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
+        "        self.token_embedding_table = nn.Embedding(vocab_size, n_embed)\n",
+        "        self.lm_head = nn.Linear(n_embed, vocab_size)\n",
         "\n",
         "    def forward(self, context, targets = None):\n",
+        "\n",
+        "        # (B,T,C)\n",
+        "        token_embed = self.token_embedding_table(context)\n",
         "        # Logits (batch_size, block_size, vocab_size)\n",
-        "        logits = self.token_embedding_table(context)\n",
+        "        logits = self.lm_head(token_embed)\n",
         "\n",
         "        # Loss\n",
         "        if targets == None:\n",
@@ -370,7 +395,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "piaGrlXHf20G",
-        "outputId": "b1eec964-55c9-482b-e0c8-cdf920925557"
+        "outputId": "825b2261-22c6-4801-8db2-e6a019f32f1b"
       },
       "execution_count": 12,
       "outputs": [
@@ -378,9 +403,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "pPyi'xmJUJatpfWwfmOm-ERVA- KinbpYxQB-z-u!u'qolki\n",
-            "rlgR\n",
-            "$$rjki!y.$dp;ckVZ'gh;'KOXfQ;RuxaH3rZGtt'AdradOK\n"
+            "uKQ$d.PJyGoyCfRW'$\n",
+            "ozy T l\n",
+            "t3DjuueQUg3yFsPBBn?iM!qc, O;;gFsSK,!z!kYMSraMmDEMtCk'QRs3.c&DK!SpfMA?Jo!Bt\n"
           ]
         }
       ]
@@ -401,9 +426,9 @@
       "cell_type": "code",
       "source": [
         "# Train BigramLanguageModel\n",
-        "print_freq = 10\n",
+        "print_freq = 100\n",
         "batch_size = 32\n",
-        "for epoch in range(100):\n",
+        "for epoch in range(3000):\n",
         "    # Get Batch\n",
         "    x, y = get_batch('train')\n",
         "    x, y = x.to(device), y.to(device)\n",
@@ -424,7 +449,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FVBJn5WnxfQS",
-        "outputId": "8ff0c262-4c31-4824-f37a-476555f7bee2"
+        "outputId": "c4e736c1-6c94-4b58-ad1a-077a5d8a9567"
       },
       "execution_count": 14,
       "outputs": [
@@ -432,16 +457,36 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch: 0, Loss: 4.496352195739746\n",
-            "Epoch: 10, Loss: 4.599323272705078\n",
-            "Epoch: 20, Loss: 4.584362030029297\n",
-            "Epoch: 30, Loss: 4.498538494110107\n",
-            "Epoch: 40, Loss: 4.577712059020996\n",
-            "Epoch: 50, Loss: 4.467401504516602\n",
-            "Epoch: 60, Loss: 4.574483871459961\n",
-            "Epoch: 70, Loss: 4.441227912902832\n",
-            "Epoch: 80, Loss: 4.4763689041137695\n",
-            "Epoch: 90, Loss: 4.581730842590332\n"
+            "Epoch: 0, Loss: 4.3982768058776855\n",
+            "Epoch: 100, Loss: 3.546319007873535\n",
+            "Epoch: 200, Loss: 3.209672212600708\n",
+            "Epoch: 300, Loss: 2.860365867614746\n",
+            "Epoch: 400, Loss: 2.7121753692626953\n",
+            "Epoch: 500, Loss: 2.748335361480713\n",
+            "Epoch: 600, Loss: 2.6707661151885986\n",
+            "Epoch: 700, Loss: 2.6101510524749756\n",
+            "Epoch: 800, Loss: 2.591538667678833\n",
+            "Epoch: 900, Loss: 2.5113446712493896\n",
+            "Epoch: 1000, Loss: 2.410372734069824\n",
+            "Epoch: 1100, Loss: 2.5149483680725098\n",
+            "Epoch: 1200, Loss: 2.5553746223449707\n",
+            "Epoch: 1300, Loss: 2.446303129196167\n",
+            "Epoch: 1400, Loss: 2.5367698669433594\n",
+            "Epoch: 1500, Loss: 2.590524435043335\n",
+            "Epoch: 1600, Loss: 2.4860634803771973\n",
+            "Epoch: 1700, Loss: 2.567815065383911\n",
+            "Epoch: 1800, Loss: 2.5266618728637695\n",
+            "Epoch: 1900, Loss: 2.5463438034057617\n",
+            "Epoch: 2000, Loss: 2.5486667156219482\n",
+            "Epoch: 2100, Loss: 2.4841928482055664\n",
+            "Epoch: 2200, Loss: 2.43172025680542\n",
+            "Epoch: 2300, Loss: 2.42266845703125\n",
+            "Epoch: 2400, Loss: 2.507502555847168\n",
+            "Epoch: 2500, Loss: 2.4707658290863037\n",
+            "Epoch: 2600, Loss: 2.467198610305786\n",
+            "Epoch: 2700, Loss: 2.5173985958099365\n",
+            "Epoch: 2800, Loss: 2.561692714691162\n",
+            "Epoch: 2900, Loss: 2.5239028930664062\n"
           ]
         }
       ]
@@ -449,14 +494,14 @@
     {
       "cell_type": "code",
       "source": [
-        "print(decode_text(model.generate(context = torch.zeros((1, 1), dtype=torch.long).to(device), max_new_tokens=500)[0].tolist()))"
+        "print(decode_text(model.generate(context = torch.zeros((1, 1), dtype=torch.long).to(device), max_new_tokens=50)[0].tolist()))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mPlBSRha6MRQ",
-        "outputId": "499bff20-888f-4fb2-f8d2-97e880878324"
+        "outputId": "bef7c602-3a64-4e3f-d9e7-3c271175ec16"
       },
       "execution_count": 15,
       "outputs": [
@@ -464,29 +509,176 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "p?!f$WSB,a?UTmwQad\n",
-            "z:NiYIX'pyzJeDhjZ-m':u.W&LL&qLD?kityASxWuKCJ:GyKy JvUW:bEAx?FShA:QIzlrb3rZe&VQ?Un\n",
-            "Hrls?Hu,?YuRLoKA.AYvhDoZeFHi\n",
-            ";c $rB,WUNu,kioXPEjPgcc'$Mf3,ERgAF&BoX.U,&mePxy\n",
-            "CCi.CYDUkilA.UgtA,A3rBUQIOd?\n",
-            "fOq'MuYxiKF:u$cGw-ki\n",
-            "et DSaF - Jr&mxgDhc3P\n",
-            "Vb$kig\n",
-            "x-GCpfqVURtIvXuGXm!QqncUNE$MMU;?-Iki 3xYKPDFojo D fmmjmjBJGht'b.rbSHgGab.OV.ULdLT:,ue,edprdtdPu?B-kZ lsxAy&- :FZbOHUQmdLdLK,iJGxA3PIOem,EZ !LOjgj!Q Ek$rBUoqgle,IGtS',w???CJprBInpzTr&EFD?cDH\n",
-            "fwbz-EqoQQ\n",
-            "fwBhHGtdgJ!EfD\n",
-            "NEEb?;c&z:vnQSXCoFx. J-' IXA\n"
+            "ue 's e'son s llolame-y hoourad wns thare tsersa s:\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Attention**"
+      ],
+      "metadata": {
+        "id": "dzcnXtebNz8Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "B, T, C = 4, 8, 2\n",
+        "x = torch.randn(B,T,C)\n",
+        "x.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IGhelxltN3BD",
+        "outputId": "986554c0-45f2-4eef-b9b8-1a5feaade1fe"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([4, 8, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# v1\n",
+        "x_bow = torch.zeros((B,T,C))\n",
+        "for i in range(B):\n",
+        "    for j in range(T):\n",
+        "        x_prev = x[i, :j,]\n",
+        "        x_bow[i, j] = torch.mean(x_prev, 0)\n",
+        "print(x_bow.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xjCkrF2yOeUT",
+        "outputId": "fd6ab0ee-0120-4232-d137-446ba116bebc"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([4, 8, 2])\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Matrix Mul Weighted Avg\n",
+        "a = torch.tril(torch.ones((3,3)))\n",
+        "a = a/torch.sum(a, 1, keepdim = True)\n",
+        "b = torch.randint(0, 10, (3,2)).float()\n",
+        "c = a@b\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(c)"
+      ],
       "metadata": {
-        "id": "2ADS-4pI6fO8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eQBh_ae6QTHw",
+        "outputId": "7774efe6-eeed-4c65-816b-7bdcef7edd55"
       },
-      "execution_count": 15,
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1.0000, 0.0000, 0.0000],\n",
+            "        [0.5000, 0.5000, 0.0000],\n",
+            "        [0.3333, 0.3333, 0.3333]])\n",
+            "tensor([[2., 4.],\n",
+            "        [5., 2.],\n",
+            "        [7., 5.]])\n",
+            "tensor([[2.0000, 4.0000],\n",
+            "        [3.5000, 3.0000],\n",
+            "        [4.6667, 3.6667]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# v2\n",
+        "weights = torch.tril(torch.ones((T,T)))\n",
+        "weights = weights/torch.sum(weights, 1, keepdim = True)\n",
+        "# (T,T)@(B,T,C) -> (B,T,T)@(B,T,C) -> (B,T,C)\n",
+        "x_bow2 = weights @ x\n",
+        "print(x_bow2.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kPmsZeGRRr78",
+        "outputId": "c2fcb977-d617-47ef-c8bc-97fe1d140aca"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([4, 8, 2])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# v3\n",
+        "tril = torch.tril(torch.ones(T,T))\n",
+        "wei = torch.zeros(T,T)\n",
+        "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+        "wei = F.softmax(wei, dim = -1)\n",
+        "x_bow3 = wei@x"
+      ],
+      "metadata": {
+        "id": "DU3tzq8FT2Tj"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# v4\n",
+        "B,T,C = 4,8,32\n",
+        "x = torch.randn(4,8,32)\n",
+        "\n",
+        "tril = torch.tril(torch.ones(T,T))\n",
+        "wei = torch.zeros(T,T)\n",
+        "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+        "wei = F.softmax(wei, dim = -1)\n",
+        "x_bow3 = wei@x"
+      ],
+      "metadata": {
+        "id": "nQMx8uOgYbKh"
+      },
+      "execution_count": 20,
       "outputs": []
     }
   ]
